--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
-"<h1>???? ????!</h1>" 
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>آموزشگاه زبان هامون</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background: #f1f1f1;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 3rem;
+            color: #4CAF50;
+            margin-bottom: 20px;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 40px;
+            width: 80%;
+            max-width: 800px;
+        }
+
+        h2 {
+            font-size: 2rem;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        .media {
+            margin-top: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+        }
+
+        .media img {
+            width: 100%;
+            max-width: 600px; /* تنظیم اندازه عکس */
+            margin-bottom: 20px;
+            border-radius: 10px;
+        }
+
+        .media iframe {
+            width: 100%; /* تنظیم عرض ویدیو */
+            height: 500px; /* تنظیم ارتفاع ویدیو */
+            margin-bottom: 20px;
+            border-radius: 10px;
+        }
+
+        .media audio {
+            width: 100%;
+            max-width: 600px;
+            margin-top: 20px;
+        }
+
+        .button {
+            background-color: #2196F3;
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            border-radius: 30px;
+            font-size: 1.5rem;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+
+        .button:hover {
+            background-color: #0b7dda;
+        }
+    </style>
+</head>
+<body>
+
+<h1>آموزشگاه زبان هامون</h1>
+
+<div class="container">
+    <h2>درباره ما</h2>
+    <p>"هامون" یک مؤسسه آموزش زبان انگلیسی است که با بهره‌گیری از روش‌های نوین تدریس، یادگیری را برای زبان‌آموزان ساده و جذاب می‌کند. در این سایت، دانشجویان می‌توانند به اطلاعات شخصی، نمرات، و سوابق تحصیلی خود دسترسی داشته باشند. همچنین، آزمون‌های تعیین سطح و منابع آموزشی متنوع برای بهبود مهارت‌های زبانی در دسترس هستند. تیم آموزشی "هامون" متشکل از اساتید باتجربه‌ای است که در تمامی مراحل یادگیری همراه شما خواهند بود. هدف ما ایجاد محیطی پویا و کارآمد برای یادگیری زبان انگلیسی است.</p>
+
+    <!-- نمایش فیلم 1 -->
+    <div class="media">
+        <iframe src="https://1drv.ms/v/s!Ajlx302Ioc0oarj5E41qFvnNzAM?e=oaZ4Za&autoplay=true" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+    </div>
+
+   
+
+    <!-- نمایش عکس1 -->
+   <!-- <div class="media">
+        <iframe src="https://1drv.ms/i/s!Ajlx302Ioc0oa2e7X6G-a9rrZHw?e=duv58D" frameborder="0" allowfullscreen></iframe>
+    </div>-->
+
+    <!-- دکمه وارد شدن به صفحه لاگین -->
+    <button class="button" onclick="window.location.href='login.html'">ورود</button>
+</div>
+
+</body>
+</html>
